Dawood Trader Second Commit

--- a/Index.html
+++ b/Index.html
@@ -21,8 +21,89 @@
 
             <h1>SAVE MONEY, GET QUALITY – SHOP SOLAR &<br> ELECTRONICS NOW WITH <strong>20% OFF!</strong></h1>
     </div>
+
+    <div class="Product-Card">
+            <div class="card">
+                    <img src="Images/DC-32-A.png" alt="" >
+                    <div class="inside-card">
+                             <h4>Tomzn DC Breaker (2 Pole, 32A) </h4>
+                             <h5>Reliable DC Protection | 2 Pole, 32A"</h5>
+                             <div class="price">
+                                     <p class="discount-price">1199 Rs |</p>
+                                     <p class="original-price"><strike>1600 Rs</strike></p>
+                             </div>
+                            <button><a href="detail.html">See More Detail</a></button>
+                    </div>
+            </div>
+
+           <div class="card">
+                    <img src="Images/DC-32-A.png" alt="" >
+                    <div class="inside-card">
+                             <h4>Tomzn DC Breaker (2 Pole, 32A) </h4>
+                             <h5>Reliable DC Protection | 2 Pole, 32A"</h5>
+                             <div class="price">
+                                     <p class="discount-price">1199 Rs |</p>
+                                     <p class="original-price"><strike>1600 Rs</strike></p>
+                             </div>
+                            <button><a href="detail.html">See More Detail</a></button>
+                    </div>
+            </div>
+
+            <div class="card">
+                    <img src="Images/DC-32-A.png" alt="" >
+                    <div class="inside-card">
+                             <h4>Tomzn DC Breaker (2 Pole, 32A) </h4>
+                             <h5>Reliable DC Protection | 2 Pole, 32A"</h5>
+                             <div class="price">
+                                     <p class="discount-price">1199 Rs |</p>
+                                     <p class="original-price"><strike>1600 Rs</strike></p>
+                             </div>
+                            <button><a href="detail.html">See More Detail</a></button>
+                    </div>
+            </div>
+    </div>
+
+     <!-- <div class="product-detail">
+            <div class="left-detail">
+                    <img src="Images/image2.jpeg" class="large-img">
+
+                    <div class="small-img-row">
+                            <div class="small-img-col">
+                                    <img src="Images/image1.jpeg" width="100%" class="small-img">
+                            </div>
+                            <div class="small-img-col">
+                                <img src="Images/image2.jpeg" width="100%" class="small-img">
+                            </div>
+                            <div class="small-img-col">
+                                <img src="Images/image3.jpeg" width="100%" class="small-img">
+                            </div>
+                            <div class="small-img-col">
+                                <img src="Images/image1.jpeg" width="100%" class="small-img">
+                            </div>
+                    </div>
+            </div>
+
+            <div class="right-detail">
+                    <h5>Home / T-Shirt</h5>
+                    <h1>Red Printed T-shirt <br> by HPX</h1>
+                    <h4>$50.00</h4>
+                    <select name="" id="">
+                            <option value="">Size</option>
+                            <option value="">Small</option>
+                            <option value="">Medium</option>
+                            <option value="">Large</option>
+                            <option value="">XL</option>
+                            <option value="">XXL</option>
+                    </select>
+                    <br>
+                    <button><a href="card.html">Add To Card Now!</a></button>
+                    <h2>Product Detail</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla quasi iure consectetur voluptatem distinctio error obcaecati eaque magnam delectus rerum, quos reprehenderit sit quisquam iste accusantium amet consectetur adipisicing elit. Nulla quasi iure consectetur voluptatem harum, enim quis. Iure dolore cumque sed.</p>
+            </div>
+      </div> -->
    </div>
 
 
+   <script src="Script.js"></script>
 </body>
 </html>
