--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
 <body>
 
@@ -22,45 +23,56 @@
             <h1>SAVE MONEY, GET QUALITY – SHOP SOLAR &<br> ELECTRONICS NOW WITH <strong>20% OFF!</strong></h1>
     </div>
 
-    <div class="Product-Card">
-            <div class="card">
-                    <img src="Images/DC-32-A.png" alt="" >
-                    <div class="inside-card">
-                             <h4>Tomzn DC Breaker (2 Pole, 32A) </h4>
-                             <h5>Reliable DC Protection | 2 Pole, 32A"</h5>
-                             <div class="price">
-                                     <p class="discount-price">1199 Rs |</p>
-                                     <p class="original-price"><strike>1600 Rs</strike></p>
-                             </div>
-                            <button><a href="detail.html">See More Detail</a></button>
-                    </div>
-            </div>
 
-           <div class="card">
-                    <img src="Images/DC-32-A.png" alt="" >
+    <div class="container">
+        <div class="row justify-content-evenly mt-5 m-2">
+                <div class="col-lg-3">
+                         <div class="card shadow-sm">
+                    <img src="Images/Dc-32-Breaker.png" alt="" >
                     <div class="inside-card">
-                             <h4>Tomzn DC Breaker (2 Pole, 32A) </h4>
-                             <h5>Reliable DC Protection | 2 Pole, 32A"</h5>
+                             <h4>Tomzn DC Breaker 32A (2 Pole, 32A, 63A) </h4>
+                             <h5>Reliable DC Protection | 2 Pole, 32A & 63A"</h5>
                              <div class="price">
-                                     <p class="discount-price">1199 Rs |</p>
-                                     <p class="original-price"><strike>1600 Rs</strike></p>
+                                     <p class="discount-price m-0">1199 Rs |</p>
+                                     <p class="original-price m-0"><strike>1600 Rs</strike></p>
                              </div>
-                            <button><a href="detail.html">See More Detail</a></button>
+                            <button><a href="DC-Breaker-32-A-63-A-Details.html">See More Detail</a></button>
                     </div>
-            </div>
+                        </div>
+                </div>
 
-            <div class="card">
-                    <img src="Images/DC-32-A.png" alt="" >
+                 <div class="col-lg-3">
+                         <div class="card">
+                    <img src="Images/Dc-32-Breaker.png" alt="" >
                     <div class="inside-card">
-                             <h4>Tomzn DC Breaker (2 Pole, 32A) </h4>
-                             <h5>Reliable DC Protection | 2 Pole, 32A"</h5>
+                             <h4>Tomzn AC Breaker | 32A (2 Pole, 32A & 63A) </h4>
+                             <h5>Reliable DC Protection | 2 Pole, 32A & 63A"</h5>
                              <div class="price">
-                                     <p class="discount-price">1199 Rs |</p>
-                                     <p class="original-price"><strike>1600 Rs</strike></p>
+                                     <p class="discount-price m-0">1499 Rs |</p>
+                                     <p class="original-price m-0"><strike>1900 Rs</strike></p>
                              </div>
-                            <button><a href="detail.html">See More Detail</a></button>
+                            <button><a href="AC-Breaker-32-A-63-A-Details.html">See More Detail</a></button>
                     </div>
-            </div>
+                        </div>
+                </div>
+
+
+                <div class="col-lg-3">
+                         <div class="card">
+                    <img src="Images/Type-Change-Braker.png" alt="" >
+                    <div class="inside-card">
+                             <h4>Type Change Circuit Breaker </h4>
+                             <h5>Reliable Circuit Breaker | 2 Pole, 32A"</h5>
+                             <div class="price">
+                                     <p class="discount-price m-0">1199 Rs |</p>
+                                     <p class="original-price m-0"><strike>1600 Rs</strike></p>
+                             </div>
+                            <button><a href="Type-Change-Braker.html">See More Detail</a></button>
+                    </div>
+                        </div>
+                </div>
+
+        </div>
     </div>
 
      <!-- <div class="product-detail">
@@ -105,5 +117,10 @@
 
 
    <script src="Script.js"></script>
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js
+"></script>
+
+
 </body>
 </html>
