--- a/Index.html
+++ b/Index.html
@@ -16,17 +16,17 @@
 <body>
 
    <div class="main-section">
-             <h3 class="Logo-Dawood-Trader">Dawood Trader</h3>
+              <a href="Index.html"><h3 class="Logo-Dawood-Trader text-black">Dawood Trader</h3></a>
     <div class="Heading-Section">
             <h2>Stop Paying High Bills — Start Saving with Solar!</h2>
 
-            <h1>SAVE MONEY, GET QUALITY – SHOP SOLAR &<br> ELECTRONICS NOW WITH <strong>20% OFF!</strong></h1>
+            <h1 class="">SAVE MONEY, GET QUALITY – SHOP SOLAR & ELECTRONICS NOW WITH <strong>20% OFF!</strong></h1>
     </div>
 
 
     <div class="container">
         <div class="row justify-content-evenly mt-5 m-2">
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-sm-6 col-11">
                          <div class="card shadow-sm">
                     <img src="Images/Dc-32-Breaker.png" alt="" >
                     <div class="inside-card">
@@ -41,7 +41,7 @@
                         </div>
                 </div>
 
-                 <div class="col-lg-3">
+                 <div class="col-lg-3 col-md-6 col-sm-6 col-11 mt-4 mt-sm-0 mt-md-0 mt-lg-0">
                          <div class="card">
                     <img src="Images/Dc-32-Breaker.png" alt="" >
                     <div class="inside-card">
@@ -57,7 +57,7 @@
                 </div>
 
 
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-sm-10 col-11 mt-4 mt-sm-3 mt-md-4 mt-lg-0">
                          <div class="card">
                     <img src="Images/Type-Change-Braker.png" alt="" >
                     <div class="inside-card">
