Fourth Added Again

--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
 <body>
 
    <div class="main-section">
-              <a href="Index.html"><h3 class="Logo-Dawood-Trader text-black">Dawood Trader</h3></a>
+              <a href="index.html"><h3 class="Logo-Dawood-Trader text-black">Dawood Trader</h3></a>
     <div class="Heading-Section">
             <h2>Stop Paying High Bills — Start Saving with Solar!</h2>
 
