--- a/AC-Breaker-32-A-63-A-Details.html
+++ b/AC-Breaker-32-A-63-A-Details.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div class="main-section">
-      <a href="Index.html"><h3 class="Logo-Dawood-Trader text-black">Dawood Trader</h3></a>
+      <a href="index.html"><h3 class="Logo-Dawood-Trader text-black">Dawood Trader</h3></a>
 
       <div class="product-detail">
   <div class="container">
