--- a/Type-Change-Braker.html
+++ b/Type-Change-Braker.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div class="main-section">
-      <a href="Index.html"
+      <a href="index.html"
         ><h3 class="Logo-Dawood-Trader text-black">Dawood Trader</h3></a
       >
 
