--- a/DC-Breaker-32-A-63-A-Details.html
+++ b/DC-Breaker-32-A-63-A-Details.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Tomzn DC Breaker | Dawood Trader</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -30,7 +30,7 @@
   <div class="container">
     <div class="row">
       <!-- Left Side (Images) -->
-      <div class="col-lg-5">
+      <div class="col-xl-5 col-lg-6 col-md-12 col-sm-12 col-12">
         <div class="left-detail">
           <img id="main-img" src="Images/Dc-32-Braker/6.jpg" class="large-img mb-3" />
 
@@ -41,8 +41,8 @@
       </div>
 
       <!-- Right Side (Details) -->
-      <div class="col-lg-7">
-        <div class="right-detail">
+      <div class="col-xl-7 col-lg-6 col-md-12 col-sm-12 mt-4 mt-lg-0 mt-xl-0">
+        <div class="right-detail ">
           <h5 id="short-title">Solar / Breaker 32-A | 2 Pole</h5>
           <h1 id="main-title">Tomzn DC Breaker <br />(2 Pole, 32A)</h1>
 
@@ -78,7 +78,7 @@
   // Product Data
   const products = {
     "32A": {
-      title: "Tomzn DC Breaker 32A (2 Pole) – <br> Compact & Reliable Solar Protection Switch",
+      title: "Tomzn DC Breaker 32A (2 Pole) – Compact & Reliable Solar Protection Switch",
       shortTitle: "Solar / Breaker 32-A | 2 Pole",
       discountPrice: "1199 Rs",
       originalPrice: "1600 Rs",
@@ -106,7 +106,7 @@
       ]
     },
     "63A": {
-      title: "Tomzn DC Breaker 63A (2 Pole) – <br>High Capacity Solar Protection Switch",
+      title: "Tomzn DC Breaker 63A (2 Pole) – High Capacity Solar Protection Switch",
       shortTitle: "Solar / Breaker 63-A | 2 Pole",
       discountPrice: "1899 Rs",
       originalPrice: "2200 Rs",
