--- a/DC-Breaker-32-A-63-A-Details.html
+++ b/DC-Breaker-32-A-63-A-Details.html
@@ -48,20 +48,23 @@
 
           <div class="price">
             <p id="discount-price" class="discount-price m-0">1199 Rs</p>
-            <p id="original-price" class="original-price m-0">
+            <p id="original-price" class="original-price m-0 px-1">
               <strike> | 1600 Rs</strike>
             </p>
           </div>
 
           <h6 class="Select-Product-Model">Select Product Model</h6>
+          <div class="d-flex flex-column align-items-start">
           <select class="mt-2 select-part" id="product-select">
-            <option value="32A" id="option">DC Breaker 32 A 2 Pole</option>
-            <option value="63A">DC Breaker 63 A 2 Pole</option>
+              <option value="32A" id="option">DC Breaker 32 A 2 Pole</option>
+              <option value="63A">DC Breaker 63 A 2 Pole</option>
           </select>
 
-          <div class="mt-2">
-            <button><a href="card.html">Add To Cart Now!</a></button>
+         <div class="main-btn mt-3">
+                        <a onclick="sendToWhatsApp()" href="Thank-You.html">Buy Now Free Home Delivery</a>
+                 </div>
           </div>
+         
 
           <h2 class="mt-3">Product Detail</h2>
           <p id="product-detail">
@@ -85,7 +88,7 @@
       detail: `
         The Tomzn DC Breaker (32A, 2 Pole) is a compact and durable breaker designed for small to medium solar systems. It ensures safe operation by providing protection against overloads and short circuits, delivering stable performance for long-term use.
         <br><br>
-        <h6>Key Features:</h6>
+        <h6>📌 Key Features:</h6>
         <ul>
           <li>Model: TOB7Z-32</li>
           <li>Rated Current: 32A</li>
@@ -114,7 +117,7 @@
         The Tomzn DC Breaker (63A, 2 Pole) is a high-performance breaker designed for solar systems and large electrical setups. 
         It ensures safe and stable operation by protecting against overloads and short circuits.
         <br><br>
-        <b>Key Features:</b>
+        <h6>📌 Key Features:</h6>
         <ul>
           <li>Model: TOB7Z-63</li>
           <li>Rated Current: 63A</li>
