--- a/Type-Change-Braker.html
+++ b/Type-Change-Braker.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Dawood Trader | Tomzn AC Changeover Switch</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -33,7 +33,11 @@
           <div class="row">
             <div class="col-lg-5">
               <div class="left-detail">
-                <img src="Images/Type-Change-Braker/1.jpg" class="large-img mb-3" />
+                <img
+                  id="main-img" 
+                  src="Images/Type-Change-Braker/1.jpg"
+                  class="large-img mb-3"
+                />
 
                 <div class="small-img-row">
                   <div class="small-img-col">
@@ -64,7 +68,7 @@
                       class="small-img"
                     />
                   </div>
-                   <div class="small-img-col">
+                  <div class="small-img-col">
                     <img
                       src="Images/Type-Change-Braker/5.jpg"
                       width="100%"
@@ -79,28 +83,46 @@
               <div class="right-detail">
                 <h5>Home / T-Shirt</h5>
                 <h1>
-                 Type Change Circuit Breaker<br />
-                  by HPX
+                  Tomzn AC Changeover Switch – 2 Pole, 63A, 230V, Generator &
+                  Main Supply Transfer Breaker
                 </h1>
                 <div class="price">
                   <p id="discount-price" class="discount-price m-0">1399 Rs</p>
-                  <p id="original-price" class="original-price m-0">
+                  <p id="original-price" class="original-price m-0 px-1">
                     <strike> | 1900 Rs</strike>
                   </p>
                 </div>
 
-                <div class="mt-2">
-                  <button><a href="card.html">Add To Cart Now!</a></button>
-                </div>
+                 <div class="main-btn mt-2">
+                        <a onclick="sendToWhatsApp()" href="Thank-You.html">Buy Now Free Home Delivery</a>
+                 </div>
                 <h2 class="mt-3">Product Detail</h2>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Nulla quasi iure consectetur voluptatem distinctio error
-                  obcaecati eaque magnam delectus rerum, quos reprehenderit sit
-                  quisquam iste accusantium amet consectetur adipisicing elit.
-                  Nulla quasi iure consectetur voluptatem harum, enim quis. Iure
-                  dolore cumque sed.
+                <p id="product-detail">
+                  The Tomzn AC Changeover Switch (2 Pole, 63A) is a reliable
+                  solution for transferring power safely between two sources,
+                  such as Main Supply and Generator, Solar and Inverter, or
+                  Backup Systems. Designed for durability and safety, this
+                  breaker provides protection against overloads and short
+                  circuits, ensuring stable power distribution in both
+                  residential and industrial applications.
                 </p>
+
+                <!-- ✅ Key Features Section -->
+                <h6> 📌 Key Features</h6>
+                <ul class="mt-2">
+                  <li>Brand: Tomzn</li>
+                  <li>Type: AC Changeover Switch / Breaker</li>
+                  <li>Model: SE2196</li>
+                  <li>Poles: 2 Pole</li>
+                  <li>Rated Current: 63A</li>
+                  <li>Rated Voltage: 230V ~ 50Hz</li>
+                  <li>
+                    Function: Safe transfer between Main Supply, Generator,
+                    Solar or Inverter
+                  </li>
+                  <li>Protection: Overload & Short Circuit</li>
+                  
+                </ul>
               </div>
             </div>
           </div>
