--- a/index.html
+++ b/index.html
@@ -1,81 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Dawood - Trader</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    />
+  </head>
+  <body>
+    <div class="main-section">
+      <a href="index.html"
+        ><h3 class="Logo-Dawood-Trader text-black">Dawood Trader</h3></a
+      >
+      <div class="Heading-Section">
+        <h2>Stop Paying High Bills — Start Saving with Solar!</h2>
 
-   <div class="main-section">
-              <a href="index.html"><h3 class="Logo-Dawood-Trader text-black">Dawood Trader</h3></a>
-    <div class="Heading-Section">
-            <h2>Stop Paying High Bills — Start Saving with Solar!</h2>
+        <h1 class="">
+          SAVE MONEY, GET QUALITY – SHOP SOLAR & ELECTRONICS NOW WITH
+          <strong>20% OFF!</strong>
+        </h1>
+      </div>
 
-            <h1 class="">SAVE MONEY, GET QUALITY – SHOP SOLAR & ELECTRONICS NOW WITH <strong>20% OFF!</strong></h1>
-    </div>
-
-
-    <div class="container">
+      <div class="container">
         <div class="row justify-content-evenly mt-5 m-2">
-                <div class="col-lg-3 col-md-6 col-sm-6 col-11">
-                         <div class="card shadow-sm">
-                    <img src="Images/Dc-32-Breaker.png" alt="" >
-                    <div class="inside-card">
-                             <h4>Tomzn DC Breaker 32A (2 Pole, 32A, 63A) </h4>
-                             <h5>Reliable DC Protection | 2 Pole, 32A & 63A"</h5>
-                             <div class="price">
-                                     <p class="discount-price m-0">1199 Rs |</p>
-                                     <p class="original-price m-0"><strike>1600 Rs</strike></p>
-                             </div>
-                            <button><a href="DC-Breaker-32-A-63-A-Details.html">See More Detail</a></button>
-                    </div>
-                        </div>
+          <div class="col-lg-3 col-md-6 col-sm-6 col-11">
+            <div class="card shadow-sm">
+              <img src="Images/Dc-32-Breaker.png" alt="" />
+              <div class="inside-card">
+                <h4>
+                  Tomzn DC Circuit Breaker – 2 Pole, 32A / 63A, Solar & Inverter
+                  Protection
+                </h4>
+                <h5>Reliable DC Protection | 2 Pole, 32A & 63A"</h5>
+                <div class="price">
+                  <p class="discount-price m-0">1199 Rs |</p>
+                  <p class="original-price m-0 px-1">
+                    <strike>1600 Rs</strike>
+                  </p>
                 </div>
+                <div class="main-btn">
+                        <a href="DC-Breaker-32-A-63-A-Details.html">See More Detail</a>
+                 </div>
+              </div>
+            </div>
+          </div>
 
-                 <div class="col-lg-3 col-md-6 col-sm-6 col-11 mt-4 mt-sm-0 mt-md-0 mt-lg-0">
-                         <div class="card">
-                    <img src="Images/Dc-32-Breaker.png" alt="" >
-                    <div class="inside-card">
-                             <h4>Tomzn AC Breaker | 32A (2 Pole, 32A & 63A) </h4>
-                             <h5>Reliable DC Protection | 2 Pole, 32A & 63A"</h5>
-                             <div class="price">
-                                     <p class="discount-price m-0">1499 Rs |</p>
-                                     <p class="original-price m-0"><strike>1900 Rs</strike></p>
-                             </div>
-                            <button><a href="AC-Breaker-32-A-63-A-Details.html">See More Detail</a></button>
-                    </div>
-                        </div>
+          <div
+            class="col-lg-3 col-md-6 col-sm-10 col-11 mt-4 mt-sm-3 mt-md-4 mt-lg-0"
+          >
+            <div class="card">
+              <img src="Images/Type-Change-Braker.png" alt="" />
+              <div class="inside-card">
+                <h4>Tomzn AC Changeover Switch – 2 Pole, 63A</h4>
+                <h5>Reliable Circuit Changeover Breaker | 2 Pole, 63A"</h5>
+                <div class="price">
+                  <p class="discount-price m-0">1199 Rs |</p>
+                  <p class="original-price m-0 px-1">
+                    <strike>1600 Rs</strike>
+                  </p>
                 </div>
+              <div class="main-btn">
+                        <a href="Type-Change-Braker.html">See More Detail</a>
+                 </div>
+              </div>
+            </div>
+          </div>
 
-
-                <div class="col-lg-3 col-md-6 col-sm-10 col-11 mt-4 mt-sm-3 mt-md-4 mt-lg-0">
-                         <div class="card">
-                    <img src="Images/Type-Change-Braker.png" alt="" >
-                    <div class="inside-card">
-                             <h4>Type Change Circuit Breaker </h4>
-                             <h5>Reliable Circuit Breaker | 2 Pole, 32A"</h5>
-                             <div class="price">
-                                     <p class="discount-price m-0">1199 Rs |</p>
-                                     <p class="original-price m-0"><strike>1600 Rs</strike></p>
-                             </div>
-                            <button><a href="Type-Change-Braker.html">See More Detail</a></button>
-                    </div>
-                        </div>
+          <div
+            class="col-lg-3 col-md-6 col-sm-6 col-11 mt-4 mt-sm-0 mt-md-0 mt-lg-0"
+          >
+            <div class="card">
+              <img src="Images/Ac-32-Breaker.png" alt="" />
+              <div class="inside-card">
+                <h4>
+                  Tomzn AC Circuit Breaker – 2 Pole, 32A / 63A, Solar & Inverter
+                  Protection
+                </h4>
+                <h5>Reliable AC Protection | 2 Pole, 32A & 63A"</h5>
+                <div class="price">
+                  <p class="discount-price m-0">1499 Rs |</p>
+                  <p class="original-price m-0 px-1">
+                    <strike>1900 Rs</strike>
+                  </p>
                 </div>
-
+                 <div class="main-btn">
+                        <a href="AC-Breaker-32-A-63-A-Details.html">See More Detail</a>
+                 </div>
+              </div>
+            </div>
+          </div>
         </div>
-    </div>
+      </div>
 
-     <!-- <div class="product-detail">
+      <!-- <div class="product-detail">
             <div class="left-detail">
                     <img src="Images/image2.jpeg" class="large-img">
 
@@ -113,14 +145,11 @@
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla quasi iure consectetur voluptatem distinctio error obcaecati eaque magnam delectus rerum, quos reprehenderit sit quisquam iste accusantium amet consectetur adipisicing elit. Nulla quasi iure consectetur voluptatem harum, enim quis. Iure dolore cumque sed.</p>
             </div>
       </div> -->
-   </div>
+    </div>
 
+    <script src="Script.js"></script>
 
-   <script src="Script.js"></script>
-
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js
 "></script>
-
-
-</body>
+  </body>
 </html>
