--- a/AC-Breaker-32-A-63-A-Details.html
+++ b/AC-Breaker-32-A-63-A-Details.html
@@ -24,68 +24,78 @@
   </head>
   <body>
     <div class="main-section">
-      <a href="index.html"><h3 class="Logo-Dawood-Trader text-black">Dawood Trader</h3></a>
+      <a href="index.html"
+        ><h3 class="Logo-Dawood-Trader text-black">Dawood Trader</h3></a
+      >
 
       <div class="product-detail">
-  <div class="container">
-    <div class="row">
-      <!-- Left Side (Images) -->
-      <div class="col-lg-5">
-        <div class="left-detail">
-          <img id="main-img" src="Images/Ac-32-Braker/5.jpg" class="large-img mb-3" />
+        <div class="container">
+          <div class="row">
+            <!-- Left Side (Images) -->
+            <div class="col-lg-5">
+              <div class="left-detail">
+                <img
+                  id="main-img"
+                  src="Images/Ac-32-Braker/5.jpg"
+                  class="large-img mb-3"
+                />
 
-          <div class="small-img-row" id="thumbnail-row">
-            <!-- Thumbnails will load here -->
+                <div class="small-img-row" id="thumbnail-row">
+                  <!-- Thumbnails will load here -->
+                </div>
+              </div>
+            </div>
+
+            <!-- Right Side (Details) -->
+            <div class="col-lg-7">
+              <div class="right-detail">
+                <h5 id="short-title">Solar / Breaker 32-A | 2 Pole</h5>
+                <h1 id="main-title">Tomzn AC Breaker <br />(2 Pole, 32A)</h1>
+
+                <div class="price">
+                  <p id="discount-price" class="discount-price m-0">1399 Rs</p>
+                  <p id="original-price" class="original-price m-0 px-1">
+                    <strike> | 1900 Rs</strike>
+                  </p>
+                </div>
+
+                <h6 class="Select-Product-Model">Select Product Model</h6>
+                <div class="d-flex flex-column align-items-start">
+                  <select class="mt-2 select-part" id="product-select">
+                    <option value="32A" id="option">
+                      AC Breaker 32 A 2 Pole
+                    </option>
+                    <option value="63A">AC Breaker 63 A 2 Pole</option>
+                  </select>
+
+                  <div class="main-btn mt-3">
+                    <a onclick="sendToWhatsApp()" href="Thank-You.html"
+                      >Buy Now Free Home Delivery</a
+                    >
+                  </div>
+                </div>
+
+                <h2 class="mt-3">Product Detail</h2>
+                <p id="product-detail">
+                  Tomzn AC Breaker (32A, 2 Pole) – Compact & reliable design.
+                  Provides safety against overloads and short circuits.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
 
-      <!-- Right Side (Details) -->
-      <div class="col-lg-7">
-        <div class="right-detail">
-          <h5 id="short-title">Solar / Breaker 32-A | 2 Pole</h5>
-          <h1 id="main-title">Tomzn AC Breaker <br />(2 Pole, 32A)</h1>
-
-          <div class="price">
-            <p id="discount-price" class="discount-price m-0">1399 Rs</p>
-            <p id="original-price" class="original-price m-0 px-1">
-              <strike> | 1900 Rs</strike>
-            </p>
-          </div>
-
-          <h6 class="Select-Product-Model">Select Product Model</h6>
-<div class="d-flex flex-column align-items-start">
-<select class="mt-2 select-part" id="product-select">
-            <option value="32A" id="option">AC Breaker 32 A 2 Pole</option>
-            <option value="63A">AC Breaker 63 A 2 Pole</option>
-          </select>
-
-         <div class="main-btn mt-3">
-                  <a onclick="sendToWhatsApp()" href="Thank-You.html">Buy Now Free Home Delivery</a>
-          </div>
-</div>
-          
-
-          <h2 class="mt-3">Product Detail</h2>
-          <p id="product-detail">
-            Tomzn AC Breaker (32A, 2 Pole) – Compact & reliable design. Provides safety
-            against overloads and short circuits.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-  <script>
-  // Product Data
-  const products = {
-  "32A": {
-    title: "Tomzn AC Breaker 32A (2 Pole) – Compact & Reliable Circuit Protection",
-    shortTitle: "AC / Breaker 32-A | 2 Pole",
-    discountPrice: "1399 Rs",
-    originalPrice: "1900 Rs",
-    detail: `
+      <script>
+        // Product Data
+        const products = {
+          "32A": {
+            title:
+              "Tomzn AC Breaker 32A (2 Pole) – Compact & Reliable Circuit Protection",
+            shortTitle: "AC / Breaker 32-A | 2 Pole",
+            discountPrice: "1399 Rs",
+            originalPrice: "1900 Rs",
+            detail: `
       The Tomzn AC Breaker (32A, 2 Pole) is designed for small to medium AC applications. 
       It provides effective protection against overloads and short circuits, ensuring the safety and stability of your electrical system.
       <br><br>
@@ -100,22 +110,23 @@
         <li>Durable & Safe: Compact design, ensures long-term stable performance</li>
       </ul>
     `,
-    images: [
-      "Images/Ac-32-Braker/2.jpg",
-      "Images/Ac-32-Braker/1.jpg",
-      "Images/Ac-32-Braker/3.jpg",
-      "Images/Ac-32-Braker/4.jpg",
-      "Images/Ac-32-Braker/5.jpg",
-      "Images/Ac-32-Braker/6.jpg",
-    ]
-  },
+            images: [
+              "Images/Ac-32-Braker/2.jpg",
+              "Images/Ac-32-Braker/1.jpg",
+              "Images/Ac-32-Braker/3.jpg",
+              "Images/Ac-32-Braker/4.jpg",
+              "Images/Ac-32-Braker/5.jpg",
+              "Images/Ac-32-Braker/6.jpg",
+            ],
+          },
 
-  "63A": {
-    title: "Tomzn AC Breaker 63A (2 Pole) – High Capacity Circuit Protection Switch",
-    shortTitle: "AC / Breaker 63-A | 2 Pole",
-    discountPrice: "1999 Rs",
-    originalPrice: "2500 Rs",
-    detail: `
+          "63A": {
+            title:
+              "Tomzn AC Breaker 63A (2 Pole) – High Capacity Circuit Protection Switch",
+            shortTitle: "AC / Breaker 63-A | 2 Pole",
+            discountPrice: "1999 Rs",
+            originalPrice: "2500 Rs",
+            detail: `
       The Tomzn AC Breaker (63A, 2 Pole) is a high-capacity breaker for large residential, commercial, and industrial AC systems. 
       It ensures maximum safety by protecting against overloads and short circuits, delivering stable and reliable performance.
       <br><br>
@@ -131,50 +142,53 @@
         <li>Durable & Safe: Heavy-duty design for long-term reliability</li>
       </ul>
     `,
-    images: [
-      "Images/Ac-63-Braker/1.jpg",
-      "Images/Ac-63-Braker/2.jpg",
-      "Images/Ac-63-Braker/3.jpg",
-      "Images/Ac-63-Braker/4.jpg",
-      "Images/Ac-63-Braker/5.jpg",
-      "Images/Ac-63-Braker/6.jpg",
-    ]
-  }
-};
+            images: [
+              "Images/Ac-63-Braker/1.jpg",
+              "Images/Ac-63-Braker/2.jpg",
+              "Images/Ac-63-Braker/3.jpg",
+              "Images/Ac-63-Braker/4.jpg",
+              "Images/Ac-63-Braker/5.jpg",
+              "Images/Ac-63-Braker/6.jpg",
+            ],
+          },
+        };
 
-  const productSelect = document.getElementById("product-select");
-  const mainImg = document.getElementById("main-img");
-  const thumbnailRow = document.getElementById("thumbnail-row");
+        const productSelect = document.getElementById("product-select");
+        const mainImg = document.getElementById("main-img");
+        const thumbnailRow = document.getElementById("thumbnail-row");
 
-  function updateProduct(type) {
-    const p = products[type];
-    document.getElementById("main-title").innerHTML = p.title;
-    document.getElementById("short-title").innerText = p.shortTitle;
-    document.getElementById("discount-price").innerText = p.discountPrice;
-    document.getElementById("original-price").innerHTML = `<strike> | ${p.originalPrice}</strike>`;
-    document.getElementById("product-detail").innerHTML = p.detail;
+        function updateProduct(type) {
+          const p = products[type];
+          document.getElementById("main-title").innerHTML = p.title;
+          document.getElementById("short-title").innerText = p.shortTitle;
+          document.getElementById("discount-price").innerText = p.discountPrice;
+          document.getElementById(
+            "original-price"
+          ).innerHTML = `<strike> | ${p.originalPrice}</strike>`;
+          document.getElementById("product-detail").innerHTML = p.detail;
 
-    // Update Images
-    mainImg.src = p.images[0];
-    thumbnailRow.innerHTML = "";
-    p.images.forEach(img => {
-      const div = document.createElement("div");
-      div.classList.add("small-img-col");
-      div.innerHTML = `<img src="${img}" width="100%" class="small-img" />`;
-      div.onclick = () => { mainImg.src = img; };
-      thumbnailRow.appendChild(div);
-    });
-  }
+          // Update Images
+          mainImg.src = p.images[0];
+          thumbnailRow.innerHTML = "";
+          p.images.forEach((img) => {
+            const div = document.createElement("div");
+            div.classList.add("small-img-col");
+            div.innerHTML = `<img src="${img}" width="100%" class="small-img" />`;
+            div.onclick = () => {
+              mainImg.src = img;
+            };
+            thumbnailRow.appendChild(div);
+          });
+        }
 
-  // Default Load
-  updateProduct("32A");
+        // Default Load
+        updateProduct("32A");
 
-  // Change Event
-  productSelect.addEventListener("change", (e) => {
-    updateProduct(e.target.value);
-  });
-  </script>
-
+        // Change Event
+        productSelect.addEventListener("change", (e) => {
+          updateProduct(e.target.value);
+        });
+      </script>
     </div>
 
     <script src="Script.js"></script>
