Add Seventh Again Commit

--- a/DC-Breaker-32-A-63-A-Details.html
+++ b/DC-Breaker-32-A-63-A-Details.html
@@ -24,7 +24,11 @@
   </head>
   <body>
     <div class="main-section">
-      <a href="index.html"><h3 class="Logo-Dawood-Trader text-black">Dawood Trader</h3></a>
+     <div class="logo-dawood-trader">
+          <a href="index.html">
+              <h3>Dawood Trader</h3>
+          </a>
+      </div>
 
   <div class="product-detail">
   <div class="container">
@@ -60,6 +64,7 @@
               <option value="63A">DC Breaker 63 A 2 Pole</option>
               <option value="25A">DC Breaker 25 A 2 Pole</option>
               <option value="16A">DC Breaker 16 A 2 Pole</option>
+              <option value="125A">DC Breaker 125 A 2 Pole</option>
           </select>
 
          <div class="main-btn mt-3">
@@ -185,6 +190,7 @@
           <li>Model: TOB7Z-63</li>
           <li>Rated Current: 16A</li>
           <li>Number of Poles: 2P (Double Pole)</li>
+          <li>Type: DC Miniature Circuit Breaker (MCB)</li>
           <li>Rated Voltage: DC 1000V</li>
           <li>Standard Compliance: IEC/EN 60947-2</li>
           <li>Certifications: ISO 9001, ISO 14001, ISO 45001</li>
@@ -199,8 +205,41 @@
         "Images/Dc-16-Braker/5.jpg",
         "Images/Dc-16-Braker/6.jpg",
       ]
+    },
+
+    "125A": {
+      title: "TOMZN DC-MCB TOB7Z-125 (2 Pole, 125A, 1000V DC Miniature Circuit Breaker)",
+      shortTitle: "Solar / Breaker 125-A | 2 Pole",
+      discountPrice: "3500 Rs",
+      originalPrice: "5000 Rs",
+      detail: `
+       TOMZN TOB7Z-125 is a heavy-duty DC miniature circuit breaker designed for high-capacity solar PV systems and industrial DC applications. With 2 poles, a rated current of 125A, and support for up to 1000V DC, it offers reliable protection against overloads and short circuits. Certified with IEC/EN 60947-2 and ISO standards, this breaker ensures long-lasting performance, safety, and stability in demanding environments.
+        <br><br>
+        <h6>📌 Key Features:</h6>
+        <ul>
+          <li>Brand: TOMZN</li>
+          <li>Model: TOB7Z-63</li>
+          <li>Rated Current: 125A</li>
+          <li>Number of Poles: 2P (Double Pole)</li>
+          <li>Type: DC Miniature Circuit Breaker (MCB)</li>
+          <li>Rated Voltage: DC 1000V</li>
+          <li>Standard Compliance: IEC/EN 60947-2</li>
+          <li>Certifications: ISO 9001, ISO 14001, ISO 45001</li>
+          <li>Ideal for solar energy systems & high-voltage DC applications</li>
+        </ul>
+      `,
+      images: [
+        "Images/Dc-125-Braker/2.jpg",
+        "Images/Dc-125-Braker/1.jpg",
+        "Images/Dc-125-Braker/3.jpg",
+        "Images/Dc-125-Braker/4.jpg",
+        "Images/Dc-125-Braker/5.jpg",
+        "Images/Dc-125-Braker/6.jpg",
+      ]
     }
   
+  
+
   
   };
 
