--- a/Type-Change-Braker.html
+++ b/Type-Change-Braker.html
@@ -24,9 +24,11 @@
   </head>
   <body>
     <div class="main-section">
-      <a href="index.html"
-        ><h3 class="Logo-Dawood-Trader text-black">Dawood Trader</h3></a
-      >
+     <div class="logo-dawood-trader">
+          <a href="index.html">
+              <h3>Dawood Trader</h3>
+          </a>
+      </div>
 
       <div class="product-detail">
         <div class="container">
