--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
   </head>
   <body>
     <div class="main-section">
-      <a href="index.html"
-        ><h3 class="Logo-Dawood-Trader text-black">Dawood Trader</h3></a
-      >
+     
+      <div class="logo-dawood-trader">
+          <a href="index.html">
+              <h3>Dawood Trader</h3>
+          </a>
+      </div>
+
       <div class="Heading-Section">
         <h2>Stop Paying High Bills — Start Saving with Solar!</h2>
 
@@ -43,7 +47,7 @@
               <img src="Images/Dc-32-Breaker.png" alt="" />
               <div class="inside-card">
                 <h4>
-                  Tomzn DC Circuit Breaker – 2 Pole, 32A / 63A, Solar & Inverter
+                  Tomzn DC Circuit Breakers – 2 Pole, 32A / 63A, / 125A, / 16A, / 25A, Solar & Inverter
                   Protection
                 </h4>
                 <h5>Reliable DC Protection | 2 Pole, 32A & 63A"</h5>
