--- a/Thank-You.html
+++ b/Thank-You.html
@@ -12,8 +12,11 @@
 </head>
 <body>
 
-              <a href="index.html"><h3 class="Logo-Dawood-Trader text-black">Dawood Trader</h3></a>
-
+             <div class="logo-dawood-trader">
+          <a href="index.html">
+              <h3>Dawood Trader</h3>
+          </a>
+      </div>
 
                 <div class="thanks-msg">
                     <h1>Your Order has been Successfully Placed</h1>
