Dawood Trader Eight Commit

--- a/index.html
+++ b/index.html
@@ -109,6 +109,36 @@
             </div>
           </div>
         </div>
+
+
+        <div class="row justify-content-evenly mt-5 m-2">
+          <div class="col-lg-3 col-md-6 col-sm-6 col-11">
+            <div class="card shadow-sm">
+              <img src="Images/Relay-Protection.png" alt="" />
+              <div class="inside-card">
+                <h4>
+                  Digital Voltage Protection Relay | Solar & Inverter
+                  Protection
+                </h4>
+                <h5>Generic Digital Voltage | OMAS AVP-63 | NIN Electric NP2-VAKWH | TOMZN TOB7Z-63 | ENTES AVK-40A/63A</h5>
+                <div class="price">
+                  <p class="discount-price m-0">1350 Rs |</p>
+                  <p class="original-price m-0 px-1">
+                    <strike>1750 Rs</strike>
+                  </p>
+                </div>
+                <div class="main-btn">
+                        <a href="Relay-Protection.html">See More Detail</a>
+                 </div>
+              </div>
+            </div>
+          </div>
+
+         
+
+        
+        </div>
+
       </div>
 
       <!-- <div class="product-detail">
