--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
     />
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
   </head>
   <body>
     <div class="main-section">
@@ -179,7 +183,152 @@
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla quasi iure consectetur voluptatem distinctio error obcaecati eaque magnam delectus rerum, quos reprehenderit sit quisquam iste accusantium amet consectetur adipisicing elit. Nulla quasi iure consectetur voluptatem harum, enim quis. Iure dolore cumque sed.</p>
             </div>
       </div> -->
+
+
+        <div class="container">
+          <div class="row">
+              <div class="col-lg-12">
+
+              </div>
+          </div>
+      </div>
+
+      <!-- services section     -->
+    <div class="container">
+          <div class="row">
+              <div class="col-lg-12">
+                  <div class="services">
+                      <h2>Why you Choose Us</h2>
+                      <h6 class="">At Dawood Trader, we offer a comprehensive range of services to meet all your solar and electronic needs.</h6>
+                      <div class="row my-4">
+                          <div class="col-lg-4">
+                              <div class="choose-us-one">
+                                 <i class="ri-product-hunt-line"></i>  
+                                <h4>
+                                    Genuine & Branded Products</h4>
+                                  <p>We deal only in authentic, high-quality brands to ensure durability, safety, and <br>reliable performance.</p>
+                              </div>
+                          </div>
+
+                           <div class="col-lg-4">
+                              <div class="choose-us-two">
+                                <i class="ri-map-pin-range-line"></i>
+                                  <h4>Wide Product Range</h4>
+                                  <p>From voltage protection relays to electrical accessories, we provide a one-stop solution for homes, offices, and industries.</p>
+                              </div>
+                          </div>
+
+                           <div class="col-lg-4">
+                              <div class="choose-us-three">
+                                <i class="ri-guide-line"></i>
+                                  <h4>Expert Guidance</h4>
+                                  <p>Our team provides professional advice and technical support to help you choose the right product for your needs.</p>
+                              </div>
+                          </div>
+
+                           <div class="col-lg-4">
+                              <div class="choose-us-four">
+                               <i class="ri-price-tag-2-line"></i>
+                                  <h4>Competitive Prices</h4>
+                                  <p>We offer the best market rates without compromising on quality, giving you maximum value for your money.</p>
+                              </div>
+                          </div>
+
+
+                           <div class="col-lg-4">
+                              <div class="choose-us-five">
+                                <i class="ri-customer-service-line"></i>
+                                  <h4>Customer Satisfaction First</h4>
+                                  <p>Your trust is our top priority. We back our products with warranties, guarantees, and after-sales <br>  support.</p>
+                              </div>
+                          </div>
+
+                           <div class="col-lg-4">
+                              <div class="choose-us-six">
+                                <i class="ri-building-2-line"></i>
+                                  <h4>2 Years of Trust</h4>
+                                  <p><strong>Dawood Trader</strong> has built a reputation for honesty, reliability, and long-term customer<br> relationships.</p>
+                              </div>
+                          </div>
+                      </div>
+                      <p class="services-end">Contact us today to learn more about our services and how we can assist you in achieving your energy goals.</p>
+                  </div>
+              </div>
+          </div>
+      </div>
+    
+      <!-- services section     -->
+
+      <!-- About section     -->
+
+        <div class="container">
+          <div class="row my-5">
+              <div class="col-lg-7 About-Section">
+                  <div class="about-us-left">
+                      <h2 class="mb-4">About Us</h2>
+                      <p><strong>
+                        Dawood Trader
+                      </strong> is your trusted partner for high-quality solar and electronic products. We are committed to providing our customers with the best solutions to help them save money and reduce their energy bills. Our extensive range of products includes solar panels, inverters, batteries, and other essential accessories, all sourced from reputable manufacturers to ensure reliability and performance.</p>
+                      <p>At <strong>
+                        Dawood Trader
+                      </strong>, we believe in the power of renewable energy and its potential to create a sustainable future. Our team of experts is dedicated to helping you find the right products that meet your specific needs and budget. Whether you're looking to install a new solar system or upgrade your existing setup, we are here to assist you every step of the way.</p>
+                      <p>We pride ourselves on our exceptional customer service and support. From initial consultation to after-sales service, we are committed to ensuring your satisfaction. Our knowledgeable staff is always available to answer your questions and provide guidance on product selection, installation, and maintenance.</p>
+                      <p>Join us in our mission to promote clean energy and make a positive impact on the environment. Shop with <strong>
+                        Dawood Trader
+                      </strong> today and take advantage of our exclusive 20% discount on all solar and electronic products. Together, we can create a brighter, greener future for generations to come.</p>
+                  </div>
+              </div>
+
+               <div class="col-lg-5">
+                  <div class="about-us-right">
+                      <img src="Images/b.png" alt="" class="img-fluid">
+                  </div>
+              </div>
+          </div>
+      </div>
+
+      <!-- About section     -->
+
+
+
+      <!-- contact us section     -->
+
+
+       <div class="container">
+          <div class="row">
+              <div class="col-lg-7">
+                  <div class="contact-us">
+                      <h2>Contact Us</h2>
+                      <p>If you have any questions or need assistance, please don't hesitate to reach out to us. Our dedicated customer service team is here to help you with any inquiries you may have about our products, services, or your order. You can contact us via phone, email, or by filling out the contact form on our website. We strive to respond to all inquiries promptly and provide you with the best possible support. Your satisfaction is our top priority, and we look forward to assisting you!</p>
+                      <p><strong>Phone:</strong> +92-300-1234567</p>
+                      <p><strong>Email:</strong>
+                      <p><strong>Address: 32 Bano Bazar Link Rd, near moti masjid, Rahim Yar Khan, 64200, Pakistan</strong>
+              </div>
+          </div>
+
+           <div class="col-lg-5">
+                  <div class="contact-us">
+                      <h2>Contact Us</h2>
+              </div>
+          </div>
+      </div>
+
+
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-12">
+                  <div class="footer">
+                      <h3>© 2024 Dawood Trader. All rights reserved.</h3>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+
     </div>
+
+      <!-- contact us section     -->
+
 
     <script src="Script.js"></script>
 
