--- a/DC-Breaker-32-A-63-A-Details.html
+++ b/DC-Breaker-32-A-63-A-Details.html
@@ -281,6 +281,17 @@
 
     </div>
 
+
+    <div class="container-fluid footer-color mt-5">
+          <div class="row">
+              <div class="col-lg-12">
+                  <div class="footer">
+                      <h5>© 2025-2026 Dawood Trader. All rights reserved.</h5>
+                  </div>
+              </div>
+          </div>
+      </div>
+
     <script src="Script.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js
