--- a/index.html
+++ b/index.html
@@ -139,8 +139,6 @@
             </div>
           </div>
 
-
-
            <div class="col-lg-3 col-md-6 col-sm-6 col-11">
             <div class="card shadow-sm">
               <img src="Images/Electronic.png" alt="" />
@@ -163,6 +161,27 @@
           </div>
 
          
+
+      <div class="col-lg-3 col-md-6 col-sm-6 col-11">
+            <div class="card shadow-sm">
+              <img src="Images/DbBox.png" alt="" />
+              <div class="inside-card">
+                <h4>
+                Premium 8 Way Electrical Distribution Boxes – Tense, 7’s & SR Electric
+                </h4>
+                <h5>Tense HT-8WAY | 7’s Eight Way Multi | SR Electric 8 Way Pure</h5>
+                <div class="price">
+                  <p class="discount-price m-0">1250 Rs |</p>
+                  <p class="original-price m-0 px-1">
+                    <strike>1700 Rs</strike>
+                  </p>
+                </div>
+                <div class="main-btn">
+                        <a href="dpBox.html">See More Detail</a>
+                 </div>
+              </div>
+            </div>
+          </div>
 
         
         </div>
