--- a/AC-Breaker-32-A-63-A-Details.html
+++ b/AC-Breaker-32-A-63-A-Details.html
@@ -61,7 +61,7 @@
                   </p>
                 </div>
 
-                <h6 class="Select-Product-Model">Select Product Model</h6>
+                <h6 class="Select-Product-Model">* Select Product Model *</h6>
                 <div class="d-flex flex-column align-items-start">
                   <select class="mt-2 select-part" id="product-select">
                     <option value="32A" id="option">
@@ -72,7 +72,7 @@
 
                   <div class="main-btn mt-3">
                     <a onclick="sendToWhatsApp()" href="Thank-You.html"
-                      >Buy Now Free Home Delivery</a
+                      >Buy Now – Free Delivery</a
                     >
                   </div>
                 </div>
