--- a/DC-Breaker-32-A-63-A-Details.html
+++ b/DC-Breaker-32-A-63-A-Details.html
@@ -57,7 +57,7 @@
             </p>
           </div>
 
-          <h6 class="Select-Product-Model">Select Product Model</h6>
+          <h6 class="Select-Product-Model">* Select Product Model *</h6>
           <div class="d-flex flex-column align-items-start">
           <select class="mt-2 select-part" id="product-select">
               <option value="32A" id="option">DC Breaker 32 A 2 Pole</option>
@@ -68,7 +68,7 @@
           </select>
 
          <div class="main-btn mt-3">
-                        <a onclick="sendToWhatsApp()" href="Thank-You.html">Buy Now Free Home Delivery</a>
+                        <a onclick="sendToWhatsApp()" href="Thank-You.html">Buy Now – Free Delivery</a>
                  </div>
           </div>
          
